Improve validation handling and starter docs